--- a/package.json
+++ b/package.json
@@ -20,10 +20,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@octokit/core": "^6.0.1",
+    "@octokit/webhooks-methods": "^5.0.0",
+    "@octokit/webhooks-types": "^7.4.0",
+    "nestjs-octokit": "^0.2.0",
     "nestjs-slack": "^2.0.0",
+    "octokit": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
